[package]
name = "raise-graph"
version = "0.1.0"
authors = ["Alexander Keijzer <alexanderkeijzer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raise = { path = "../raise"}
proc-macro2 = "1.0.12"
syn = { version = "1.0.20", features = ["full", "fold"] }
quote = "1.0.4"
lazy_static = "1.4.0"

[lib]
proc-macro = true